# os223

./: .~初赛报告.md  CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  appletwidget.cpp  appletwidget.h  informationwidget.cpp  informationwidget.h  install.sh  main_aboutdialog_test.cpp  main_test.cpp  mainwidget.cpp  mainwidget.h  pluginsettingdialog.cpp  pluginwidget.cpp  pluginwidget.h  self_startup.json  self_startup.pro  self_startup.qrc  selfstartupplugin.cpp  selfstartupplugin.h  type.h  uninstall.sh  widget.cpp  初赛报告.md  初赛报告1.md  过程文档.md
src/: helloeworldplugin.h  helloworldplugin.cpp
